--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,14 @@
 {
   "name": "voip-frontend",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=16 <20"
+  },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "npx vite build",
+    "preview": "vite preview",
+    "postinstall": "chmod +x ./node_modules/.bin/vite"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
